--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+#java specific
 *.class
 
 # Mobile Tools for Java (J2ME)
@@ -10,3 +11,15 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+
+#netbeans ignore personal stuff
+nbproject/
+
+## generic files to ignore
+*~
+*.lock
+*.DS_Store
+*.swp
+*.out
+
